--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -40,3 +40,14 @@ jobs:
           name: run-calc-macos-arm64
           path: dist/run-calc
           retention-days: 30
+      
+      - name: Create Release
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          VERSION="v$(date +%Y%m%d-%H%M%S)"
+          gh release create "$VERSION" \
+            --title "macOS arm64 build $VERSION" \
+            --notes "Automated build from commit ${{ github.sha }}" \
+            dist/run-calc#run-calc-macos-arm64
