ci: enable auto-generated release notes

--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -51,5 +51,5 @@ jobs:
           VERSION="v$(grep '^version' pyproject.toml | head -1 | cut -d'"' -f2)-$(date +%Y%m%d-%H%M%S)"
           gh release create "$VERSION" \
             --title "macOS arm64 build $VERSION" \
-            --notes "Automated build from commit ${{ github.sha }}" \
+            --generate-notes \
             dist/run-calc#run-calc-macos-arm64
