feat: add ruff linting and formatting with pre-commit hooks
- Added ruff and pre-commit to dev dependencies in pyproject.toml
- Configured ruff with modern Python 3.10+ settings (line-length 100, comprehensive rule set)
- Created .pre-commit-config.yaml with ruff hooks and standard pre-commit checks
- Updated Makefile with lint, format, and check targets
- Added lint job to CI workflow (runs before tests)
- Applied automatic formatting and fixes:
  - Modernized type hints (Union -> | syntax)
  - Added exception chaining (raise ... from err)
  - Fixed import ordering (isort-style)
  - Added noqa comment for unavoidable import pattern in tests
- All tests passing (12/12)
- Pre-commit hooks installed locally

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,27 @@ on:
     branches: [ main, master ]
 
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.12'
+
+      - name: Install ruff
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install ruff>=0.7.0
+
+      - name: Run ruff linter
+        run: ruff check src tests bin
+
+      - name: Run ruff formatter check
+        run: ruff format --check src tests bin
+
   test:
     runs-on: ubuntu-latest
     strategy:
