fix: remove invalid --branch option from semantic-release
The semantic-release tool does not support a --branch option. It
automatically detects the current branch from git. The previous
commit incorrectly added this flag, causing the workflow to fail with:
'Error: No such option: --branch Did you mean --patch?'

Now semantic-release will run on the current branch (release/X.Y.Z)
and correctly create the version commit.

--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -79,7 +79,8 @@ jobs:
 
           # Now run semantic-release ON the release branch to create the version commit
           # This commit will be on the release branch, not main
-          semantic-release version --commit --changelog --no-push --no-tag --branch "${BRANCH}"
+          # Note: semantic-release auto-detects the current branch, no --branch flag needed
+          semantic-release version --commit --changelog --no-push --no-tag
 
           # Push the release branch with the version commit
           git push origin "${BRANCH}"
