fix: configure semantic-release to work with develop branch
Added develop branch configuration to semantic-release so it can
analyze commits and determine version bumps when running the
create-release workflow from develop.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,6 +64,10 @@ commit_message = "chore(release): {version}"
 match = "main"
 prerelease = false
 
+[tool.semantic_release.branches.develop]
+match = "develop"
+prerelease = false
+
 [tool.semantic_release.changelog]
 changelog_file = "CHANGELOG.md"
 exclude_commit_patterns = [
