--- a/.github/workflows/finalize-release.yml
+++ b/.github/workflows/finalize-release.yml
@@ -13,7 +13,7 @@ jobs:
   finalize-release:
     name: Finalize Release
     runs-on: ubuntu-latest
-    # Only run when a release PR is merged to main
+    # Only run when a release PR is squash-merged to main with chore(release): message
     if: startsWith(github.event.head_commit.message, 'chore(release):')
 
     steps:
