--- a/.github/workflows/finalize-release.yml
+++ b/.github/workflows/finalize-release.yml
@@ -110,60 +110,4 @@ jobs:
           git push origin develop
 
           echo "✅ Merged main back to develop to keep branches in sync"
-
-  build-binary:
-    name: Build macOS Binary
-    needs: finalize-release
-    runs-on: macos-latest
-    if: startsWith(github.event.head_commit.message, 'chore(release):')
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v6
-        with:
-          fetch-depth: 0
-
-      - name: Get latest tag
-        id: get_tag
-        run: |
-          git fetch --tags
-          TAG=$(git describe --tags --abbrev=0)
-          echo "tag=$TAG" >> $GITHUB_OUTPUT
-
-      - name: Checkout code at tag
-        run: |
-          git checkout ${{ steps.get_tag.outputs.tag }}
-
-      - name: Set up Python
-        uses: actions/setup-python@v6
-        with:
-          python-version: '3.12'
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -e .
-          pip install pyinstaller
-
-      - name: Build binary with PyInstaller
-        run: |
-          pyinstaller --onefile --name run-calc bin/run_calc.py
-
-      - name: Test binary
-        run: |
-          ./dist/run-calc add 2 3
-          ./dist/run-calc multiply 4 5
-          ./dist/run-calc average 10 20 30
-          ./dist/run-calc --help
-
-      - name: Rename binary
-        run: |
-          mv dist/run-calc dist/run-calc-macos-arm64
-
-      - name: Upload binary to release
-        uses: softprops/action-gh-release@v2
-        with:
-          tag_name: ${{ steps.get_tag.outputs.tag }}
-          files: dist/run-calc-macos-arm64
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          echo "✅ Build macOS Binary workflow will run automatically to attach the binary"
