--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -41,25 +41,13 @@ jobs:
           path: dist/run-calc
           retention-days: 30
 
-      - name: Get release tag
-        if: github.event_name == 'workflow_dispatch' || startsWith(github.event.head_commit.message, 'chore(release):')
-        id: get_tag
-        run: |
-          git fetch --tags
-          TAG=$(git describe --tags --abbrev=0)
-          echo "tag=$TAG" >> $GITHUB_OUTPUT
-          echo "Found release tag: $TAG"
-
-      - name: Rename binary
-        if: github.event_name == 'workflow_dispatch' || startsWith(github.event.head_commit.message, 'chore(release):')
-        run: |
-          mv dist/run-calc dist/run-calc-macos-arm64
-
-      - name: Upload binary to release
-        if: github.event_name == 'workflow_dispatch' || startsWith(github.event.head_commit.message, 'chore(release):')
-        uses: softprops/action-gh-release@v2
-        with:
-          tag_name: ${{ steps.get_tag.outputs.tag }}
-          files: dist/run-calc-macos-arm64
+      - name: Create Release
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          VERSION="v$(grep '^version' pyproject.toml | head -1 | cut -d'"' -f2)-$(date +%Y%m%d-%H%M%S)"
+          gh release create "$VERSION" \
+            --title "macOS arm64 build $VERSION" \
+            --generate-notes \
+            dist/run-calc#run-calc-macos-arm64
