--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,6 +60,9 @@ upload_to_vcs_release = true
 build_command = "pip install build && python -m build"
 commit_message = "chore(release): {version}"
 
+[tool.semantic_release.version]
+major_on_zero = false  # Stay in 0.x versions, don't auto-bump to 1.0.0
+
 [tool.semantic_release.branches.main]
 match = "main"
 prerelease = false
