fix: add release branch configuration to semantic-release
- Add [tool.semantic_release.branches.release] section
- Match pattern 'release/*' to allow version generation on release branches
- This fixes empty changelog in release PRs

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,6 +71,10 @@ prerelease = false
 match = "develop"
 prerelease = false
 
+[tool.semantic_release.branches.release]
+match = "release/*"
+prerelease = false
+
 [tool.semantic_release.changelog]
 changelog_file = "CHANGELOG.md"
 exclude_commit_patterns = [
