--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -86,13 +86,12 @@ jobs:
           # Create release branch from develop
           git checkout -b "${BRANCH}"
 
-          # Run semantic-release to update files (but don't commit yet)
-          # It will update pyproject.toml, CHANGELOG.md, etc.
-          if [ "${{ github.event.inputs.release-type }}" == "auto" ]; then
-            semantic-release version --changelog --no-push --no-tag --no-commit --skip-build
-          else
-            semantic-release version --${{ github.event.inputs.release-type }} --changelog --no-push --no-tag --no-commit --skip-build
-          fi
+          # Update version in pyproject.toml
+          NEW_VERSION="${VERSION}"
+          sed -i '' "s/^version = .*/version = \"${NEW_VERSION}\"/" pyproject.toml
+
+          # Generate changelog using semantic-release
+          semantic-release changelog --unreleased
 
           # Manually commit the changes
           git add -A
