fix: use Linux-compatible sed syntax in create-release workflow

--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -88,7 +88,7 @@ jobs:
 
           # Update version in pyproject.toml
           NEW_VERSION="${VERSION}"
-          sed -i '' "s/^version = .*/version = \"${NEW_VERSION}\"/" pyproject.toml
+          sed -i "s/^version = .*/version = \"${NEW_VERSION}\"/" pyproject.toml
 
           # Generate changelog using semantic-release
           semantic-release changelog --unreleased
