--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -107,30 +107,42 @@ jobs:
 
           # Create new changelog entry
           TODAY=$(date +%Y-%m-%d)
-          NEW_ENTRY="## [${VERSION}] - ${TODAY}\n"
+          NEW_ENTRY="## [${VERSION}] - ${TODAY}"
 
           if [ -n "$FEATURES" ]; then
-            NEW_ENTRY="${NEW_ENTRY}\n### Added\n${FEATURES}\n"
+            NEW_ENTRY="${NEW_ENTRY}\n\n### Added\n${FEATURES}"
           fi
           if [ -n "$FIXES" ]; then
-            NEW_ENTRY="${NEW_ENTRY}\n### Fixed\n${FIXES}\n"
+            NEW_ENTRY="${NEW_ENTRY}\n\n### Fixed\n${FIXES}"
           fi
           if [ -n "$DOCS" ]; then
-            NEW_ENTRY="${NEW_ENTRY}\n### Documentation\n${DOCS}\n"
+            NEW_ENTRY="${NEW_ENTRY}\n\n### Documentation\n${DOCS}"
           fi
           if [ -n "$CI" ]; then
-            NEW_ENTRY="${NEW_ENTRY}\n### CI/CD\n${CI}\n"
+            NEW_ENTRY="${NEW_ENTRY}\n\n### CI/CD\n${CI}"
           fi
           if [ -n "$CHORES" ]; then
-            NEW_ENTRY="${NEW_ENTRY}\n### Changed\n${CHORES}\n"
+            NEW_ENTRY="${NEW_ENTRY}\n\n### Changed\n${CHORES}"
           fi
 
-          # Insert new entry after [Unreleased] section
+          # Replace [Unreleased] content with new version section
+          # Keep [Unreleased] header but empty it, add new version section below
           awk -v entry="$NEW_ENTRY" '
-            /^## \[Unreleased\]/ {print; in_unreleased=1; next}
-            in_unreleased && /^## \[/ {print entry; in_unreleased=0}
-            in_unreleased && /^$/ && !printed {print entry; printed=1}
-            {print}
+            /^## \[Unreleased\]/ {
+              print "## [Unreleased]"
+              print ""
+              print entry
+              print ""
+              # Skip until next version section
+              in_unreleased=1
+              next
+            }
+            in_unreleased && /^## \[/ {
+              in_unreleased=0
+            }
+            !in_unreleased {
+              print
+            }
           ' CHANGELOG.md > CHANGELOG.md.tmp && mv CHANGELOG.md.tmp CHANGELOG.md
 
           # Manually commit the changes
