feat: add workflow_dispatch to CI and auto-trigger CI on release PRs

--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -209,6 +209,22 @@ jobs:
           echo "✅ PR title set to: chore(release): ${VERSION}"
           echo "✅ Repository squash merge enabled - commit will trigger finalize workflow"
 
+      - name: Trigger CI checks
+        if: steps.version.outputs.release_needed == 'true'
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          VERSION=${{ steps.version.outputs.next_version }}
+          BRANCH="release/${VERSION}"
+
+          # Push an empty commit to trigger CI on the PR
+          # (GitHub doesn't auto-trigger workflows on bot-created PRs)
+          git checkout "${BRANCH}"
+          git commit --allow-empty -m "ci: trigger CI checks"
+          git push origin "${BRANCH}"
+
+          echo "✅ CI checks triggered on release PR"
+
       - name: Summary
         if: steps.version.outputs.release_needed == 'true'
         run: |
