fix: let create-pull-request action handle branch creation and commit

--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -69,26 +69,21 @@ jobs:
             echo "✅ Next version will be: ${NEXT_VERSION}"
           fi
 
-      - name: Create release branch and commit
+      - name: Prepare release files on develop
         if: steps.version.outputs.release_needed == 'true'
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           VERSION=${{ steps.version.outputs.next_version }}
-          BRANCH="release/${VERSION}"
 
-          # Clean up any existing release branch
-          git branch -D "${BRANCH}" 2>/dev/null || true
-          if git ls-remote --heads origin "${BRANCH}" | grep -q "${BRANCH}"; then
-            git push origin --delete "${BRANCH}" 2>/dev/null || true
+          # Clean up any existing release branch remotely
+          if git ls-remote --heads origin "release/${VERSION}" | grep -q "release/${VERSION}"; then
+            git push origin --delete "release/${VERSION}" 2>/dev/null || true
           fi
 
-          # Create release branch from develop
-          git checkout -b "${BRANCH}"
-
+          # Stay on develop - don't create a branch yet
           # Update version in pyproject.toml
-          NEW_VERSION="${VERSION}"
-          sed -i "s/^version = .*/version = \"${NEW_VERSION}\"/" pyproject.toml
+          sed -i "s/^version = .*/version = \"${VERSION}\"/" pyproject.toml
 
           # Generate changelog from git commits since last merge-back
           # This handles squash merge workflow correctly by finding the last
@@ -153,21 +148,16 @@ jobs:
             }
           ' CHANGELOG.md > CHANGELOG.md.tmp && mv CHANGELOG.md.tmp CHANGELOG.md
 
-          # Commit changes - let create-pull-request action handle the push
-          git add -A
-          git commit -m "chore(release): ${VERSION}"
-
-          echo "✅ Created release branch: ${BRANCH}"
+          # Don't commit yet - let create-pull-request action do it
+          echo "✅ Prepared release files for version ${VERSION}"
 
       - name: Extract changelog for PR body
         if: steps.version.outputs.release_needed == 'true'
         id: changelog
         run: |
           VERSION=${{ steps.version.outputs.next_version }}
-          BRANCH="release/${VERSION}"
 
-          # Checkout release branch to access the updated CHANGELOG
-          git checkout "${BRANCH}"
+          # Extract changelog from the modified CHANGELOG.md (still on develop)
 
           # Extract changelog for this version using sed
           CHANGELOG_SECTION=$(sed -n "/^## \\[${VERSION}\\]/,/^## \\[/p" CHANGELOG.md | sed '$d' || echo "See CHANGELOG.md for details")
